--- a/Lab01Kucherenko/Lab01Kucherenko/MainWindow.xaml
+++ b/Lab01Kucherenko/Lab01Kucherenko/MainWindow.xaml
@@ -1,12 +1,12 @@
-﻿<Window x:Class="Lab01Kucherenko.MainWindow"
+﻿<Window x:Class="KMA.Lab01Kucherenko.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Lab01Kucherenko"
+        xmlns:views="clr-namespace:KMA.Lab01Kucherenko.Views"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="370" Width="400" MinHeight="350" MinWidth="390">
     <Grid>
-
+        <views:ZodiacView/>
     </Grid>
 </Window>
