--- a/Lab01Kucherenko/Lab01Kucherenko/Views/ZodiacView.xaml
+++ b/Lab01Kucherenko/Lab01Kucherenko/Views/ZodiacView.xaml
@@ -9,26 +9,30 @@
         <TextBlock Text="Select your birth date: " HorizontalAlignment="Center" Height="30" Width="200"
                    Margin="0,25,0,0"
                    VerticalAlignment="Top" TextAlignment="Center" FontSize="20" />
-        <DatePicker SelectedDate="{Binding DateOfBirth}" HorizontalAlignment="Center" Width="150" Height="25"
+        <DatePicker SelectedDate="{Binding DateOfBirth, Mode=TwoWay}" HorizontalAlignment="Center" Width="150"
+                    Height="25"
                     Margin="0,60,0,0" VerticalAlignment="Top" />
-        <TextBlock Name="TbAge" Text="{Binding Age, StringFormat='Your age is: {0}', Mode=TwoWay}"
+        <TextBlock Name="TbAge" Text="{Binding Age, StringFormat='Your age is: {0}', Mode=OneWay}"
                    HorizontalAlignment="Center" TextWrapping="Wrap"
                    VerticalAlignment="Top" TextAlignment="Center" Width="200" Height="25" Margin="0,110,0,0"
                    FontSize="16" />
         <TextBlock Name="TbZodiacSign"
                    HorizontalAlignment="Left" Margin="45,140,0,0" TextWrapping="Wrap"
-                   VerticalAlignment="Top" Height="70" Width="120" TextAlignment="Center" FontSize="16" Text="Your Zodiac Sign:">
+                   VerticalAlignment="Top" Height="70" Width="120" TextAlignment="Center" FontSize="16"
+                   Text="Your Zodiac Sign:">
             <LineBreak />
-            <Run Text="{Binding ZodiacSign, Mode=TwoWay}" />
+            <Run Text="{Binding Zodiac, Mode=OneWay}" />
         </TextBlock>
         <TextBlock Name="TbChineseZodiacTextBlock"
                    HorizontalAlignment="Right" Margin="0,140,45,0" TextWrapping="Wrap"
-                   VerticalAlignment="Top" Height="70" Width="120" TextAlignment="Center" FontSize="16" Text="Your Chinese Zodiac Sign:">
+                   VerticalAlignment="Top" Height="70" Width="120" TextAlignment="Center" FontSize="16"
+                   Text="Your Chinese Zodiac Sign:">
             <LineBreak />
-            <Run Text="{Binding ChineseZodiacSign, Mode=TwoWay}" />
+            <Run Text="{Binding ChineseZodiac, Mode=OneWay}" />
         </TextBlock>
-        <Button Name="Submit"  Content="What's my signs?" Width="200" Height="35"
+        <Button Name="Submit" Content="What's my signs?" Width="200" Height="35"
                 VerticalAlignment="Top" HorizontalAlignment="Center" Margin="0,265,0,0"
-                Background="DarkCyan" BorderBrush="Black" FontWeight="DemiBold" FontSize="18" Command="{Binding GetZodiacSign}"/>
+                Background="DarkCyan" BorderBrush="Black" FontWeight="DemiBold" FontSize="18"
+                Command="{Binding SignsRequestedCommand}" />
     </Grid>
 </UserControl>
